--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
           <img class="bottom-cloud" src="/img/CSS - My Site Images/cloud.png" alt="cloud">
 
-          <img class="mountain" src="/img/CSS - My Site Images/mountain.png" alt="">
+          <img class="mountain" src="img/CSS - My Site Images/mountain.png" alt="">
      </div>
 
 
