updated img path

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <body>
 
      <div class="div1">
-          <img class="top-cloud" src="/img/CSS - My Site Images/cloud.png" alt="cloud">
+          <img class="top-cloud" src="img/CSS - My Site Images/cloud.png" alt="cloud">
 
           <h1>I'm Pratik</h1>
           <p class="a-programmer">a programmer</p>
 
-          <img class="bottom-cloud" src="/img/CSS - My Site Images/cloud.png" alt="cloud">
+          <img class="bottom-cloud" src="img/CSS - My Site Images/cloud.png" alt="cloud">
 
-          <img class="mountain" src="img/CSS - My Site Images/mountain.png" alt="">
+          <img class="mountain" src="img/CSS - My Site Images/mountain.png" alt="mountain">
      </div>
 
 
